--- a/level1/question1/index.html
+++ b/level1/question1/index.html
@@ -7,6 +7,10 @@
 <body>
 
 <!-- Create a button that creates an alert when clicked -->
+      <h2>Button</h2>
+  <p id="paragraf">This is my button
+
+<button id="button1">Button</button></p>
 
 
 <script src="script.js"></script>
